# Chroma.Calo---Geant4

./: CMakeLists.txt  Chromatic  Calorimetry (1).pptx  MyDetectorConstruction.cc  MyDetectorConstruction.hh  MyPrimaryGeneratorAction.cc  MyPrimaryGeneratorAction.hh  MyRunAction.cc  MyRunAction.hh  MySensitiveDetector.cc  MySensitiveDetector.hh  README.md  init_vis.mac  main.cc
